# camera-box

./: .gitignore  CLAUDE.md  Cargo.toml  SETUP.md  distroav-issue-response.md  distroav-timestamp-fix.patch  targets.md
.github/workflows/: build-image.yml  ci.yml  release.yml
benches/: format_conversions.rs
distroav-fixed/: timestamp-fix.diff
scripts/: build-image.sh  create-image.sh  create-ubuntu-vm.sh  create-usb-linux.sh  deploy.sh  install-binary.sh  install.sh  setup-device.sh  setup.sh  write-image.sh
src/: capture.rs  config.rs  display.rs  intercom.rs  lib.rs  main.rs  ndi.rs  ndi_display.rs  vban.rs
systemd/: camera-box.service
