[package]
name = "camera-box"
version = "1.0.0"
edition = "2021"
authors = ["zbynekdrlik"]
description = "Simple USB video capture to NDI streaming appliance"
license = "MIT"
repository = "https://github.com/zbynekdrlik/camera-box"

[dependencies]
# V4L2 capture
v4l = "0.14"

# Dynamic library loading (for NDI SDK at runtime)
libloading = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Low-level system calls (real-time scheduling, memory locking)
libc = "0.2"

# Audio I/O for VBAN intercom
cpal = "0.15"
alsa = "0.9"

# Input device events (for power button mute)
evdev = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
